force-app/main/default/objects/Risk_Register__c/Risk_Register__c.object-meta.xml
<CustomObject>
    <description>Object to capture risks and issues that are reported as part of the warm homes project into the risk register</description>
    <label>Risk Register</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>