force-app/main/default/objects/Risk_Register__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Describe the risk&apos;s cause(s)</description>
    <inlineHelpText>Describe the risk&apos;s cause(s)</inlineHelpText>
    <label>Cause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>