force-app/main/default/objects/Risk_Register__c/fields/Contingency_Plans__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Plans__c</fullName>
    <description>What will be done if this risk materialises?</description>
    <inlineHelpText>What will be done if this risk materialises?</inlineHelpText>
    <label>Contingency Plans</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>