force-app/main/default/objects/Risk_Register__c/fields/Current_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Score__c</fullName>
    <description>The overall risk score is auto calculated from the Impact score multiplied by the Likelihood score, as per the scoring matrix</description>
    <formula>Impact_Score__c  *  Likelihood_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The overall risk score is auto calculated from the Impact score multiplied by the Likelihood score, as per the scoring matrix</inlineHelpText>
    <label>Current Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>