force-app/main/default/objects/Risk_Register__c/fields/Effect__c.field-meta.xml
<CustomField>
    <fullName>Effect__c</fullName>
    <description>Describe the risk&apos;s effect(s) or impact(s)</description>
    <inlineHelpText>Describe the risk&apos;s effect(s) or impact(s)</inlineHelpText>
    <label>Effect</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>