force-app/main/default/objects/Risk_Register__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>DP to SHF W3 Project team</fullName>
            </value>
            <value>
                <fullName>DP to WH: LG Project team</fullName>
            </value>
            <value>
                <fullName>SHF W3 Project to SHDF Programme</fullName>
            </value>
            <value>
                <fullName>WH: LG Project to LG Programme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>