force-app/main/default/objects/Risk_Register__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>The risk&apos;s impact, as per the scoring matrix</description>
    <inlineHelpText>The risk&apos;s impact, as per the scoring matrix</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>