force-app/main/default/objects/Risk_Register__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <description>Impact Score as per the scoring matrix</description>
    <formula>CASE(
      Impact__c ,
    &quot;Very Low&quot;, 1,
    &quot;Low&quot;, 2,
    &quot;Medium&quot;, 3,
    &quot;High&quot;, 4,
    &quot;Very High&quot;, 5,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Impact Score as per the scoring matrix</inlineHelpText>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>