force-app/main/default/objects/Risk_Register__c/fields/Inherent_Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Likelihood_Score__c</fullName>
    <description>Likelihood score captured on record creation</description>
    <label>Inherent Likelihood Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>