force-app/main/default/objects/Risk_Register__c/fields/Inherent_Risk__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Risk__c</fullName>
    <description>RAG captured at point of risk record creation</description>
    <label>Inherent Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>