force-app/main/default/objects/Risk_Register__c/fields/Inherent_Score__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Score__c</fullName>
    <description>Score captured when Risk record is created</description>
    <label>Inherent Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>