force-app/main/default/objects/Risk_Register__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <description>The likelihood of the risk materialising, as per the scoring matrix.</description>
    <inlineHelpText>The likelihood of the risk materialising, as per the scoring matrix.</inlineHelpText>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Unlikely</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Certain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>