force-app/main/default/objects/Risk_Register__c/fields/Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_Score__c</fullName>
    <description>Likelihood Score as per the scoring matrix</description>
    <formula>CASE(
     Likelihood__c ,
    &quot;Very Unlikely&quot;, 1,
    &quot;Unlikely&quot;, 2,
    &quot;Possible&quot;, 3,
    &quot;Likely&quot;, 4,
    &quot;Very Likely&quot;, 5,
    &quot;Certain&quot;, 20,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Likelihood Score as per the scoring matrix</inlineHelpText>
    <label>Likelihood Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>