force-app/main/default/objects/Risk_Register__c/fields/Materialised_Date__c.field-meta.xml
<CustomField>
    <fullName>Materialised_Date__c</fullName>
    <description>Date that Risk became an Issue</description>
    <label>Materialised Date</label>
    <type>Date</type>
</CustomField>