force-app/main/default/objects/Risk_Register__c/fields/Planned_Actions__c.field-meta.xml
<CustomField>
    <fullName>Planned_Actions__c</fullName>
    <description>What actions will be taken to mitigate this risk?</description>
    <inlineHelpText>What actions will be taken to mitigate this risk?</inlineHelpText>
    <label>Planned Actions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>