force-app/main/default/objects/Risk_Register__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Displays the percentage based on the Likelihood that the risk will occur during the lifetime of the activity</description>
    <formula>CASE(
     Likelihood__c ,
    &quot;Very Unlikely&quot;, &quot;&lt;10%&quot;,
    &quot;Unlikely&quot;, &quot;10-35%&quot;,
    &quot;Possible&quot;, &quot;35-65%&quot;,
    &quot;Likely&quot;, &quot;65-90%&quot;,
    &quot;Very Likely&quot;, &quot;90%&gt;&quot;,
    &quot;Certain&quot;, &quot;100%&quot;,
&quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the percentage based on the Likelihood that the risk will occur during the lifetime of the activity</inlineHelpText>
    <label>Probability %</label>
    <type>Text</type>
</CustomField>