force-app/main/default/objects/Risk_Register__c/fields/Reason_for_Risk_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Risk_Closure__c</fullName>
    <label>Reason for Risk Closure</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>