force-app/main/default/objects/Risk_Register__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <description>Displays the RAG colour of the calculated impact by likelihood as per the scoring matrix</description>
    <formula>IF(
    OR(
        AND(ISPICKVAL(Impact__c, &quot;Very High&quot;), ISPICKVAL(Likelihood__c, &quot;Very Unlikely&quot;)),
        AND(ISPICKVAL(Impact__c, &quot;Very High&quot;), ISPICKVAL(Likelihood__c, &quot;Unlikely&quot;))
    ),
    &quot;AMBER&quot;,

    IF(
        AND(
            ISPICKVAL(Impact__c, &quot;Very High&quot;),
            OR(
                ISPICKVAL(Likelihood__c, &quot;Possible&quot;),
                ISPICKVAL(Likelihood__c, &quot;Likely&quot;),
                ISPICKVAL(Likelihood__c, &quot;Very Likely&quot;)
            )
        ),
        &quot;RED&quot;,

    IF(
        AND(ISPICKVAL(Impact__c, &quot;High&quot;), ISPICKVAL(Likelihood__c, &quot;Very Unlikely&quot;)),
        &quot;GREEN&quot;,

    IF(
        AND(
            ISPICKVAL(Impact__c, &quot;High&quot;),
            OR(
                ISPICKVAL(Likelihood__c, &quot;Unlikely&quot;),
                ISPICKVAL(Likelihood__c, &quot;Possible&quot;)
            )
        ),
        &quot;AMBER&quot;,

    IF(
        AND(
            ISPICKVAL(Impact__c, &quot;High&quot;),
            OR(
                ISPICKVAL(Likelihood__c, &quot;Likely&quot;),
                ISPICKVAL(Likelihood__c, &quot;Very Likely&quot;)
            )
        ),
        &quot;RED&quot;,

    IF(
        AND(ISPICKVAL(Impact__c, &quot;Medium&quot;), ISPICKVAL(Likelihood__c, &quot;Very Unlikely&quot;)),
        &quot;GREEN&quot;,

    IF(
        AND(ISPICKVAL(Impact__c, &quot;Medium&quot;), ISPICKVAL(Likelihood__c, &quot;Unlikely&quot;)),
        &quot;GREEN&quot;,

    IF(
        AND(
            ISPICKVAL(Impact__c, &quot;Medium&quot;),
            OR(
                ISPICKVAL(Likelihood__c, &quot;Possible&quot;),
                ISPICKVAL(Likelihood__c, &quot;Likely&quot;),
                ISPICKVAL(Likelihood__c, &quot;Very Likely&quot;)
            )
        ),
        &quot;AMBER&quot;,

    IF(
        AND(ISPICKVAL(Impact__c, &quot;Low&quot;), ISPICKVAL(Likelihood__c, &quot;Very Unlikely&quot;)),
        &quot;GREEN&quot;,

    IF(
        AND(ISPICKVAL(Impact__c, &quot;Low&quot;), ISPICKVAL(Likelihood__c, &quot;Unlikely&quot;)),
        &quot;GREEN&quot;,

    IF(
        AND(
            ISPICKVAL(Impact__c, &quot;Low&quot;),
            OR(
                ISPICKVAL(Likelihood__c, &quot;Possible&quot;),
                ISPICKVAL(Likelihood__c, &quot;Likely&quot;),
                ISPICKVAL(Likelihood__c, &quot;Very Likely&quot;)             
            )
        ),
        &quot;GREEN&quot;,

      
    IF(
        ISPICKVAL(Likelihood__c, &quot;Certain&quot;),
        &quot;RED&quot;,
  
 IF(
        ISPICKVAL(Impact__c, &quot;Very Low&quot;),
        &quot;GREEN&quot;,


    &quot;No Color&quot;
    )))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the RAG colour of the calculated impact by likelihood as per the scoring matrix</inlineHelpText>
    <label>Risk</label>
    <type>Text</type>
</CustomField>