force-app/main/default/objects/Risk_Register__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Issues</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Cost Inflation</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Resourcing</fullName>
            </value>
            <value>
                <fullName>Scope Changes</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Timescales</fullName>
            </value>
            <value>
                <fullName>Unexpected</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>