force-app/main/default/objects/Risk_Register__c/fields/Risk_Category_Other_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category_Other_if_applicable__c</fullName>
    <label>Risk Category - Other (if applicable)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>