force-app/main/default/objects/Risk_Register__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <label>Risk Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>