force-app/main/default/objects/Risk_Register__c/fields/Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Owner__c</fullName>
    <description>Risk owner - to test need with LAs</description>
    <inlineHelpText>Risk owner - to test need with LAs</inlineHelpText>
    <label>Risk Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Project Manager</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>