force-app/main/default/objects/Risk_Register__c/fields/Risk_Owner_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Risk_Owner_Other_Details__c</fullName>
    <label>Risk Owner Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>