force-app/main/default/objects/Risk_Register__c/fields/Risk_Register_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Register_Level__c</fullName>
    <label>Risk Register Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Scheme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>