force-app/main/default/objects/Risk_Register__c/fields/Risk_Reporting_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reporting_Period_Start_Date__c</fullName>
    <description>Allows Risk Register to be set up independently of Award updates</description>
    <inlineHelpText>Allows Risk Register to be set up independently of Award updates</inlineHelpText>
    <label>Risk Reporting Period Start Date</label>
    <type>Date</type>
</CustomField>