force-app/main/default/objects/Risk_Register__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Materialised</fullName>
            </value>
            <value>
                <fullName>Escalated to Business</fullName>
                <isActive>false</isActive>
                <label>Escalated to Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>