force-app/main/default/objects/Risk_Register__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <description>Tpe of risk record</description>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Threat</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>