force-app/main/default/objects/Risk_Register__c/fields/Scheme_Affected__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Affected__c</fullName>
    <label>Scheme Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>SHF3</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>