force-app/main/default/objects/Risk_Register__c/fields/Scheme_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Risk_Category__c</fullName>
    <description>Broader Scheme Level Risk categories</description>
    <label>Scheme Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retrofit and Energy Efficiency quality standards</fullName>
            </value>
            <value>
                <fullName>Compliance with legal and regulatory requirements</fullName>
            </value>
            <value>
                <fullName>Risk management</fullName>
            </value>
            <value>
                <fullName>Project planning and execution</fullName>
            </value>
            <value>
                <fullName>Governance, controls &amp; consortium arrangements</fullName>
            </value>
            <value>
                <fullName>Data management and quality assurance</fullName>
            </value>
            <value>
                <fullName>Compliance with the principles of Managing Public Money</fullName>
            </value>
            <value>
                <fullName>Financial management</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Tenant/Resident Engagement</fullName>
            </value>
            <value>
                <fullName>Procurement and contract management</fullName>
            </value>
            <value>
                <fullName>Ethical conduct</fullName>
            </value>
            <value>
                <fullName>N/A Award Level risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>