force-app/main/default/objects/Risk_Register__c/fields/Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Status_Update__c</fullName>
    <description>To provide narrative on progression of risk</description>
    <label>Status Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>