force-app/main/default/objects/Risk_Register__c/recordTypes/Scheme.recordType-meta.xml
<RecordType>
    <fullName>Scheme</fullName>
    <active>true</active>
    <description>Scheme level risk</description>
    <label>Scheme</label>
</RecordType>