force-app/main/default/objects/Risk_Register__c/validationRules/Award_Risk_must_have_Funding_Award.validationRule-meta.xml
<ValidationRule>
    <fullName>Award_Risk_must_have_Funding_Award</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Award&quot;,
    ISBLANK( Funding_Award__c )
)</errorConditionFormula>
    <errorMessage>A Risk with record type &apos;Award&apos; must ne linked to a Funding Award</errorMessage>
</ValidationRule>