force-app/main/default/objects/Risk_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Risk_Category__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Risk__c</columns>
    <columns>Inherent_Risk__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>