force-app/main/default/objects/Risk_Register__c/listViews/Closed_Risk_Register_Records.listView-meta.xml
<ListView>
    <fullName>Closed_Risk_Register_Records</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Risk_Category__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Risk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Risk_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Risk Register Records</label>
</ListView>