force-app/main/default/objects/Risk_Register__c/listViews/Escalated_Risks_and_Issues_SHF.listView-meta.xml
<ListView>
    <fullName>Escalated_Risks_and_Issues_SHF</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Escalation__c</columns>
    <columns>Risk_Category__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Risk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Escalation__c</field>
        <operation>notEqual</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Scheme</value>
    </filters>
    <filters>
        <field>Scheme_Affected__c</field>
        <operation>equals</operation>
        <value>SHF3,Both</value>
    </filters>
    <filters>
        <field>Escalation__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Escalated Risks and Issues - SHF</label>
    <sharedTo>
        <group>Digital_Modus</group>
        <group>SHF_User</group>
    </sharedTo>
</ListView>