force-app/main/default/objects/Risk_Register__c/listViews/Scheme_Risk_Register.listView-meta.xml
<ListView>
    <fullName>Scheme_Risk_Register</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Scheme_Risk_Category__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Risk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Scheme</value>
    </filters>
    <label>Scheme Risk Register</label>
</ListView>